/*
 * $Id: ChangeLog,v 1.439 2002/10/14 23:54:31 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-10-14 18:52 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbclass.ch
    * Corrected default scope to nScope.

2002-10-14 16:52 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbclass.ch
    + Added new HB_CLSTP_PUBLISHED

  * include/hboo.ch
    + Added support for new HB_CLSTP_PUBLISHED
    + Added support for PUBLIC as synonym to EXPORTED.
    + Added support for PRIVATE as synonym to HIDDEN.
    + Added logic to detect and generate Error Message if code uses conflicting SCOPE Qualifers.
    ! Optimized HBCLSCHOICE() - No more multiple nested IIF() in generated code.

2002-10-14 11:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c
  * source/vm/hvm.c
    ! Fixed support for pushing [non static] string variable by reference.

  * include/hbsetup.h
    * Increased HB_PCODE_VER to 3 because recent change to HB_FS_PUBLIC requires all prg to be recompiled.
  * source/vm/hvm.c
    * Made PCODE version Error Message more user friendly.

2002-10-13 11:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
    + Added support for End() method calls into OnError()

2002-10-13 11:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbvmpub.h
    * Changed #define HB_FS_PUBLIC to: ( ( HB_SYMBOLSCOPE ) 0x01 )

  * include/hbcomp.h
  * source/compiler/harbour.c
    * Added 3rd paramater bAlias to to void hb_compGenPushSymbol( char * szSymbolName, BOOL bFunction, BOOL bAlias );

  * include/hbexprb.c
  * include/hbmacro.h
  * source/compiler/genc.c
  * source/compiler/harbour.sly
  * source/vm/macro.c
    + Added 3rd paramater to all calls to hb_compGenPushSymbol()

  * source/vm/dynsym.c
  * source/vm/hvm.c