@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.439 2002/10/14 23:54:31 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.440 2002/10/15 01:54:26 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2002-10-15 10:00 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
+   * include/hbapi.h
+     + add function prototype: extern char * hb_verPCode( void )
+   * source/rtl/version.c
+     + add Harbour surface function: HB_PCODE() => Return pCode version info
+   * source/common/hbver.c
+     + add PCode Version information when user issue -build switch.
 
 2002-10-14 18:52 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbclass.ch
